--- a/UploadExcel-Mamoun/Web.config
+++ b/UploadExcel-Mamoun/Web.config
@@ -17,7 +17,7 @@
 
   <connectionStrings>
   
-    <add name="PortalDB" connectionString="Data Source=172.21.160.5;Initial Catalog=Propspace;User ID=PortalUser;Password=deyaar123" providerName="System.Data.SqlClient" />
+    <add name="PortalDB" connectionString="Data Source=IPADDRESS;Initial Catalog=DBNAME;User ID=USERNAME;Password=PASWord" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
